--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "bootstrap": "^5.1.3",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "5.2.0-beta1",
+    "jquery": "^3.6.0",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "exports-loader": "^4.0.0"
   }
 }
