--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REVUE_API_KEY=LY2l41Db-xueIQoPcr-IDj8ms5zpTa9I
+MONGO_URI=mongodb+srv://ashiqthedev:19158417EfS@cluster0.p2ndwls.mongodb.net/ashiqthedev
