--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "5.2.0-beta1",
     "jquery": "^3.6.0",
+    "mongoose": "^6.4.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "req": "^0.1.4",
+    "request": "^2.88.2",
+    "res": "^0.4.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
